add api documantion of the article categories section
